# sector-feeds

./: .bitpod_runtime.env.example  .gitignore  AGENTS.md  BRANCHING.md  CHANGELOG.md  CLOUDFLARE_PARANOID_PUBLIC_CHECKLIST.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pyproject.toml  shows.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
bitpod/: __init__.py  __main__.py  audio.py  cli.py  config.py  core_intake_handshake.py  cost_meter.py  deck_state.py  discovery.py  feeds.py  indexer.py  intake.py  intake_gate_policy.py  ops.py  paths.py  retro_flags.py  storage.py  sync.py  track_reports.py
index/: processed.json
milestones/: legacy_m9_intake_policy.json  m5_policy.json  m9_linear_mcp_policy.json  m9_ns_jtbd.json  m9_policy.json
scripts/: automation_memory_path.sh  bitpod_budget.env  bitpod_ctl.py  bitpod_status.sh  bitpod_sync.sh  bitpod_verify.sh  bootstrap_show.sh  check_bitregime_core_intake_handshake.sh  check_feed_identity_contract.sh  check_repo_size.sh  check_taylor_agent.sh  check_taylor_skill.sh  check_track_status_board.sh  deck_state_ctl.py  deploy_public_permalinks_pages.sh  deploy_public_permalinks_worker.sh  diagnose_codex_workspace_rebuild.sh  dns_restore_default.sh  dns_set_fast.sh  experimental_weekly_ctl.sh  export_compare_plain.sh  flag_retro_item.sh  generate_weekly_critical_bundle.py  gpt_report_from_transcript.py  handoff_refresh.sh  init_proving_run.sh  make_review_bundle.sh  prepare_show_gpt_qa.sh  print_show_contract.sh  record_show_gpt_feedback.sh  refresh_public_permalinks.py  render_track_status_board.sh  (+23 more)
(+135 files in other folders)
